<resources>
    <string name="app_name">LokalKart</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_city">Please select your city :</string>
    <string name="select_locality">Please select your locality :</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">NEXT</string>
    <string name="patience">Patience is a virtue ...</string>
    <string name="category_header">SHOP BY CATEGORY</string>

    <string name="progressDialogCities">Loading cities ...</string>
    <string name="progressDialogLocalities">Loading localities ...</string>

</resources>
