<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lokalkart.fragments.LocationHomeScreenFragment">

    <LinearLayout
        android:id="@+id/llSelectCityLoc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10"
        android:background="#80FF00">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:background="#00FFFF">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvCitySelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_city"/>

                <Spinner
                    android:id="@+id/spinnerCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCitySelect"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:background="#F78181">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvLocalitySelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_locality"/>

                <Spinner
                    android:id="@+id/spinnerLocality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLocalitySelect"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="#8A0808">

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/btnSelectedCityLocality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/THEME_COLOR"
                android:text="@string/next" />


        </LinearLayout>



    </LinearLayout>



</LinearLayout>
